@@ -182,6 +182,7 @@ Chronological list of authors
   - Henok Ademtew
   - Uma D Kadam
   - Tamandeep Singh
+  - Marcelo D. Poleto
 
 External code
 -------------
